grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._statement)),

    _statement: ($) =>
      choice(
        $.expression_statement,
        $._declaration_statement,
        $.conc_statement, // Added[cite: 1]
      ),

    expression_statement: ($) => choice(seq($._expression, ";"), prec(1, $._expression_ending_with_block)),

    _declaration_statement: ($) =>
      choice(
        $.const_item,
        $.macro_invocation,
        $.macro_definition,
        $.empty_statement,
        $.attribute_item,
        $.inner_attribute_item,
        $.mod_item,
        $.foreign_mod_item,
        $.struct_item,
        $.union_item,
        $.enum_item,
        $.type_item,
        $.function_item,
        $.function_signature_item,
        $.impl_item,
        $.interface_item, // Added
        $.extension_item, // Added
        $.newtype_item, // Added[cite: 1]
        $.trait_item,
        $.associated_type,
        $.let_declaration,
        $.use_declaration,
        $.extern_crate_declaration,
        $.static_item,
      ),

    // Section - Macro definitions

    _tokens: ($) => choice($.token_tree, $.token_repetition, $.metavariable, $._non_special_token),

    token_tree: ($) => choice(seq("(", repeat($._tokens), ")"), seq("[", repeat($._tokens), "]"), seq("{", repeat($._tokens), "}")),

    attribute_item: ($) => seq("#", "[", $.attribute, "]"),

    attribute: ($) => seq($._path, optional(choice(seq("=", field("value", $._expression)), field("arguments", alias($.delim_token_tree, $.token_tree))))),

    declaration_list: ($) => seq("{", repeat($._declaration_statement), "}"),

    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "struct",
        field("name", $._type_identifier),
        field("type_parameters", optional($.type_parameters)),
        choice(seq(optional($.where_clause), field("body", $.field_declaration_list)), seq(field("body", $.ordered_field_declaration_list), optional($.where_clause), ";"), ";"),
      ),

    enum_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "enum",
        field("name", $._type_identifier),
        field("type_parameters", optional($.type_parameters)),
        optional($.where_clause),
        field("body", $.enum_variant_list),
      ),

    enum_variant_list: ($) => seq("{", sepBy(",", seq(repeat($.attribute_item), $.enum_variant)), optional(","), "}"),

    enum_variant: ($) =>
      seq(
        optional($.visibility_modifier),
        field("name", $.identifier),
        field("body", optional(choice($.field_declaration_list, $.ordered_field_declaration_list))),
        optional(seq("=", field("value", $._expression))),
      ),

    field_declaration_list: ($) => seq("{", sepBy(",", seq(repeat($.attribute_item), $.field_declaration)), optional(","), "}"),

    field_declaration: ($) => seq(optional($.visibility_modifier), field("name", $._field_identifier), ":", field("type", $._type)),

    ordered_field_declaration_list: ($) => seq("(", sepBy(",", seq(repeat($.attribute_item), optional($.visibility_modifier), field("type", $._type))), optional(","), ")"),

    const_item: ($) => seq(optional($.visibility_modifier), "const", field("name", $.identifier), ":", field("type", $._type), optional(seq("=", field("value", $._expression))), ";"),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $._type))),
        optional($.where_clause),
        field("body", $.block),
      ),

    function_signature_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $._type))),
        optional($.where_clause),
        ";",
      ),

    trait_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional("unsafe"),
        "trait",
        field("name", $._type_identifier),
        field("type_parameters", optional($.type_parameters)),
        field("bounds", optional($.trait_bounds)),
        optional($.where_clause),
        field("body", $.declaration_list),
      ),

    trait_bounds: ($) => seq(":", sepBy1("+", choice($._type, $.lifetime, $.higher_ranked_trait_bound))),

    type_parameters: ($) => prec(1, seq("<", sepBy1(",", seq(repeat($.attribute_item), choice($.metavariable, $.type_parameter, $.lifetime_parameter, $.const_parameter))), optional(","), ">")),

    type_parameter: ($) => prec(1, seq(field("name", $._type_identifier), optional(field("bounds", $.trait_bounds)), optional(seq("=", field("default_type", $._type))))),

    lifetime_parameter: ($) => prec(1, seq(field("name", $.lifetime), optional(field("bounds", $.trait_bounds)))),

    let_declaration: ($) =>
      seq(
        "let",
        optional($.mutable_specifier),
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        optional(seq("else", field("alternative", $.block))),
        ";",
      ),

    use_declaration: ($) => seq(optional($.visibility_modifier), "use", field("argument", $._use_clause), ";"),

    _use_clause: ($) => choice($._path, $.use_as_clause, $.use_list, $.scoped_use_list, $.use_wildcard),

    scoped_use_list: ($) => seq(field("path", optional($._path)), "::", field("list", $.use_list)),

    use_list: ($) => seq("{", sepBy(",", choice($._use_clause)), optional(","), "}"),

    use_as_clause: ($) => seq(field("path", $._path), "as", field("alias", $.identifier)),

    use_wildcard: ($) => seq(optional(seq(optional($._path), "::")), "*"),

    parameters: ($) => seq("(", sepBy(",", seq(optional($.attribute_item), choice($.parameter, $.self_parameter, $.variadic_parameter, "_", $._type))), optional(","), ")"),

    self_parameter: ($) => seq(optional("&"), optional($.lifetime), optional($.mutable_specifier), $.self),

    parameter: ($) => seq(optional($.mutable_specifier), field("pattern", choice($._pattern, $.self)), ":", field("type", $._type)),

    visibility_modifier: ($) => choice($.crate, seq("pub", optional(seq("(", choice($.self, $.super, $.crate, seq("in", $._path)), ")")))),

    // Section - Types

    _type: ($) =>
      choice(
        $.abstract_type,
        $.reference_type,
        $.metavariable,
        $.pointer_type,
        $.generic_type,
        $.scoped_type_identifier,
        $.tuple_type,
        $.unit_type,
        $.array_type,
        $.function_type,
        $._type_identifier,
        $.macro_invocation,
        $.never_type,
        $.dynamic_type,
        $.bounded_type,
        $.removed_trait_bound,
        alias(choice(...primitiveTypes), $.primitive_type),
      ),

    lifetime: ($) => prec(1, seq("'", $.identifier)),

    array_type: ($) => seq("[", field("element", $._type), optional(seq(";", field("length", $._expression))), "]"),

    function_type: ($) =>
      seq(
        optional($.for_lifetimes),
        prec(PREC.call, seq(choice(field("trait", choice($._type_identifier, $.scoped_type_identifier)), seq(optional($.function_modifiers), "fn")), field("parameters", $.parameters))),
        optional(seq("->", field("return_type", $._type))),
      ),

    tuple_type: ($) => seq("(", sepBy1(",", $._type), optional(","), ")"),

    unit_type: (_) => seq("(", ")"),

    generic_type: ($) => prec(1, seq(field("type", choice($._type_identifier, $._reserved_identifier, $.scoped_type_identifier)), field("type_arguments", $.type_arguments))),

    type_arguments: ($) => seq(token(prec(1, "<")), sepBy1(",", seq(choice($._type, $.type_binding, $.lifetime, $._literal, $.block), optional($.trait_bounds))), optional(","), ">"),

    reference_type: ($) => seq("&", optional($.lifetime), optional($.mutable_specifier), field("type", $._type)),

    abstract_type: ($) =>
      seq(
        "impl",
        optional(seq("for", $.type_parameters)),
        field("trait", prec(1, choice($._type_identifier, $.scoped_type_identifier, $.removed_trait_bound, $.generic_type, $.function_type, $.tuple_type, $.bounded_type))),
      ),

    mutable_specifier: (_) => "mut",

    // Section - Expressions

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        $.reference_expression,
        $.try_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $.yield_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitiveTypes), $.identifier),
        prec.left($._reserved_identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.await_expression,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        prec(1, $.macro_invocation),
        $.unit_expression,
        $.break_expression,
        $.continue_expression,
        $.index_expression,
        $.metavariable,
        $.closure_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block,
      ),

    _expression: ($) =>
      choice(
        $._expression_except_range,
        $.range_expression,
        $.pipe_expression, // Added[cite: 1]
      ),

    _expression_ending_with_block: ($) =>
      choice($.unsafe_block, $.async_block, $.gen_block, $.try_block, $.block, $.if_expression, $.match_expression, $.while_expression, $.loop_expression, $.for_expression, $.const_block),

    macro_invocation: ($) => seq(field("macro", choice($.scoped_identifier, $.identifier, $._reserved_identifier)), "!", alias($.delim_token_tree, $.token_tree)),

    scoped_identifier: ($) => seq(field("path", optional(choice($._path, $.bracketed_type, alias($.generic_type_with_turbofish, $.generic_type)))), "::", field("name", choice($.identifier, $.super))),

    scoped_type_identifier: ($) =>
      seq(field("path", optional(choice($._path, alias($.generic_type_with_turbofish, $.generic_type), $.bracketed_type, $.generic_type))), "::", field("name", $._type_identifier)),

    try_expression: ($) => prec(PREC.try, seq($._expression, "?")),

    binary_expression: ($) => {
      const table = [
        [PREC.and, "&&"],
        [PREC.or, "||"],
        [PREC.bitand, "&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    return_expression: ($) => choice(prec.left(seq("return", $._expression)), prec(-1, "return")),

    call_expression: ($) => prec(PREC.call, seq(field("function", $._expression_except_range), field("arguments", $.arguments))),

    arguments: ($) => seq("(", sepBy(",", seq(repeat($.attribute_item), $._expression)), optional(","), ")"),

    array_expression: ($) =>
      seq("[", repeat($.attribute_item), choice(seq($._expression, ";", field("length", $._expression)), seq(sepBy(",", seq(repeat($.attribute_item), $._expression)), optional(","))), "]"),

    tuple_expression: ($) => seq("(", repeat($.attribute_item), seq($._expression, ","), repeat(seq($._expression, ",")), optional($._expression), ")"),

    if_expression: ($) => prec.right(seq("if", field("condition", $._condition), field("consequence", $.block), optional(field("alternative", $.else_clause)))),

    _condition: ($) => choice($._expression, $.let_condition, alias($._let_chain, $.let_chain)),

    else_clause: ($) => seq("else", choice($.block, $.if_expression)),

    break_expression: ($) => prec.left(seq("break", optional($.label), optional($._expression))),

    continue_expression: ($) => prec.left(seq("continue", optional($.label))),

    await_expression: ($) => prec(PREC.field, seq($._expression, ".", "await")),

    field_expression: ($) => prec(PREC.field, seq(field("value", $._expression), ".", field("field", choice($._field_identifier, $.integer_literal)))),

    block: ($) => seq(optional(seq($.label, ":")), "{", repeat($._statement), optional($._expression), "}"),

    // Section - Patterns

    _pattern: ($) =>
      choice(
        $._literal_pattern,
        alias(choice(...primitiveTypes), $.identifier),
        $.identifier,
        $.scoped_identifier,
        $.generic_pattern,
        $.tuple_pattern,
        $.tuple_struct_pattern,
        $.struct_pattern,
        $._reserved_identifier,
        $.ref_pattern,
        $.slice_pattern,
        $.captured_pattern,
        $.reference_pattern,
        $.remaining_field_pattern,
        $.mut_pattern,
        $.range_pattern,
        $.or_pattern,
        $.const_block,
        $.macro_invocation,
        "_",
      ),

    tuple_pattern: ($) => seq("(", sepBy(",", choice($._pattern, $.closure_expression)), optional(","), ")"),

    slice_pattern: ($) => seq("[", sepBy(",", $._pattern), optional(","), "]"),

    tuple_struct_pattern: ($) => seq(field("type", choice($.identifier, $.scoped_identifier, alias($.generic_type_with_turbofish, $.generic_type))), "(", sepBy(",", $._pattern), optional(","), ")"),

    struct_pattern: ($) => seq(field("type", choice($._type_identifier, $.scoped_type_identifier)), "{", sepBy(",", choice($.field_pattern, $.remaining_field_pattern)), optional(","), "}"),

    field_pattern: ($) =>
      seq(
        optional("ref"),
        optional($.mutable_specifier),
        choice(field("name", alias($.identifier, $.shorthand_field_identifier)), seq(field("name", $._field_identifier), ":", field("pattern", $._pattern))),
      ),

    // Ensure spread is allowed in array/struct patterns
    reference_pattern: ($) => seq("&", optional($.mutable_specifier), $._pattern),

    _literal: ($) => choice($.string_literal, $.raw_string_literal, $.char_literal, $.boolean_literal, $.integer_literal, $.float_literal),

    integer_literal: (_) => token(seq(choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/), optional(choice(...numericTypes)))),

    string_literal: ($) => seq(alias(/[bc]?"/, '"'), repeat(choice($.escape_sequence, $.string_content)), alias($.string_close, '"')),

    boolean_literal: (_) => choice("true", "false"),

    _path: ($) => choice($.self, alias(choice(...primitiveTypes), $.identifier), $.metavariable, $.super, $.crate, $.identifier, $.scoped_identifier, $._reserved_identifier),

    identifier: (_) => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/,

    _reserved_identifier: ($) => alias(choice("default", "union", "gen", "raw"), $.identifier),

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    self: (_) => "self",
